2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Composer() method.
	* Curry.cs: Rename to Delegates.cs.
	* Delegates.cs: Add .Compose() extension methods.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* Tuples.cs: Fix doc typo.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* Object.cs: Rename .Let() to .With().

2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* Object.cs: Added; adds .Let() extension method.

2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* Nullable.cs: Remove .Select().

2008-09-01  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: .ToTuple() should take an IEnumerable, not an
	  IEnumerable<T>, as the type parameter really isn't needed.
	* Nullable.cs: Added; Extension methods for manipulating nullable values.
	* Tuples.cs: Remove the CreateNullable() methods, as we can use
	  Tuple.Create(...).ToNullable() now for the same result.

2008-08-31  Jonathan Pryor  <jpryor@novell.com>

	* Curry.cs: Add XML documentation; remove Tuple null checks.
	* IEnumerable.cs: .ToTuple() now returns object, not Tuple.
	* Lambdas.cs: Flush doc changes.
	* Sequence.cs (GenerateReverse): Use Func<S,Tuple<R,S>?> instead of
	  Func<S,Tuple<R,S>> as Tuple is a struct now.
	* Tuple.cs: Major changes: Tuples are now structs, not classes; remove
	  interface member implementations.
	* Tuples.cs: Flush (major alterations; see mktuples description).

2008-08-28  Jonathan Pryor  <jpryor@novell.com>

	* Lambdas.cs: Flush doc updates.

2008-08-28  Jonathan Pryor  <jpryor@novell.com>

	* Lambdas.cs: Flush (changes method names; see mklambda description).

2008-08-27  Jonathan Pryor  <jpryor@novell.com>

	* AssemblyInfo.cs: Enable CLS Compliance checking.
	* Tuples.cs: Flush (adds [CLSCompliant(false)] to _N members).
	* StreamConverter.cs, UInt16.cs, UInt32.cs, UInt64.cs: Mark these types 
	  as [CLSCompliant(false)].
	* Stream.cs: Disable CLS compliance on StreamConverter-using members.
