@@ -6,6 +6,7 @@
 ./Tests/Mono.Rocks.Tests/BaseRocksFixture.cs
 ./Tests/Mono.Rocks.Tests/KeyValuePairTest.cs
 ./Tests/Mono.Rocks.Tests/LambdaTest.cs
+./Tests/Mono.Rocks.Tests/MaybeTest.cs
 ./Tests/Mono.Rocks.Tests/NaturalStringComparerTest.cs
 ./Tests/Mono.Rocks.Tests/NullableTest.cs
 ./Tests/Mono.Rocks.Tests/ObjectTest.cs
