@@ -53,16 +53,16 @@ namespace Mono.Rocks {
 				yield return value;
 		}
 
-		public static IEnumerable<TResult> GenerateReverse<TSource, TResult> (TSource value, Func<TSource, Tuple<TResult, TSource>?> func)
+		public static IEnumerable<TResult> GenerateReverse<TSource, TResult> (TSource value, Func<TSource, Maybe<Tuple<TResult, TSource>>> func)
 		{
 			Check.Func (func);
 
 			return CreateGenerateReverseIterator (value, func);
 		}
 
-		private static IEnumerable<TResult> CreateGenerateReverseIterator<TSource, TResult> (TSource value, Func<TSource, Tuple<TResult, TSource>?> func)
+		private static IEnumerable<TResult> CreateGenerateReverseIterator<TSource, TResult> (TSource value, Func<TSource, Maybe<Tuple<TResult, TSource>>> func)
 		{
-			Tuple<TResult, TSource>? r;
+			Maybe<Tuple<TResult, TSource>> r;
 			while ((r = func (value)).HasValue) {
 				Tuple<TResult, TSource> v = r.Value;
 				yield return v._1;
